<resources>
    <string name="app_name">UKF</string>

    <!-- uvodne menu -->
    <string name="moznosti_studia">Možnosti štúdia</string>
    <string name="podmienky_prijatia">Podmienky prijatia</string>
    <string name="studentsky_zivot">Študentský život</string>
    <string name="orientacia">Orientácia</string>
    <string name="udalosti">Kalendár udalostí</string>

    <!-- menu moznosti studia -->
    <string name="ekologia_enviromentalistika">Aplikovaná ekológia a environmentalistika</string>
    <string name="informatika">Aplikovaná informatika</string>
    <string name="biologia">Biológia</string>
    <string name="environmentalistika">Environmentalistika</string>
    <string name="fyzika">Fyzika</string>
    <string name="geografia">Geografia v regionálnom rozvoji</string>
    <string name="matematika">Matematicko-štatistické a informačné metódy v ekonómii a finančníctve</string>
    <string name="gemologia">Technická mineralógia - gemológia</string>
    <string name="ucitelstvo_biologia">Učiteľstvo biológie v kombinácii</string>
    <string name="ucitelstvo_ekologia">Učiteľstvo ekológie v kombinácii</string>
    <string name="ucitelstvo_fyzika">Učiteľstvo fyziky v kombinácii</string>
    <string name="ucitelstvo_geografia">Učiteľstvo geografie v kombinácii</string>
    <string name="ucitelstvo_chemia">Učiteľstvo chémie v kombinácii</string>
    <string name="ucitelstvo_informatika">Učiteľstvo informatiky v kombinácii</string>
    <string name="ucitelstvo_matematika">Učiteľstvo matematiky v kombinácii</string>
    <string name="ucitelstvo_ekonomika">Učiteľstvo odborných ekonomických predmetov v kombinácii</string>

    <string name="viac_info">Viac informácií o študijnom programe</string>

    <string name="udalosti_zoznam">Zobraziť všetky udalosti</string>

    <!-- menu studentsky zivot -->
    <string name="mesto">Mesto vášho štúdia</string>
    <string name="doprava">Doprava</string>
    <string name="internet">Pripojenie k internetu</string>
    <string name="ubytovanie">Ubytovanie</string>
    <string name="stravovanie">Stravovanie</string>
    <string name="kultura_sport">Možnosti kultúry a športu</string>
    <string name="basketbal">Basketbalový klub</string>
    <string name="fs_ponitran">FS Ponitran</string>
    <string name="kluby_zdruzenia">Študentské kluby a združenia</string>
    <string name="upc">Univerzitné pastoračné centrum</string>
    <string name="erasmus">ERASMUS</string>
</resources>

