<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/ukf_gray"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:onClick="calendarButton"
        app:cardCornerRadius="8dp"
        app:cardElevation="@dimen/card_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"/>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginHorizontal="@dimen/bubi"
                android:layout_marginVertical="@dimen/bubi"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/moznosti_studia"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginHorizontal="@dimen/bubi"
                android:layout_marginVertical="@dimen/bubi"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/podmienky_prijatia"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </android.support.v7.widget.CardView>
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="5dp"
            android:layout_marginVertical="5dp"
            android:layout_weight="1">

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginHorizontal="@dimen/bubi"
                android:layout_marginVertical="@dimen/bubi"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/studentsky_zivot"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginHorizontal="@dimen/bubi"
                android:layout_marginVertical="@dimen/bubi"
                android:layout_weight="1"
                app:cardCornerRadius="8dp"
                app:cardElevation="@dimen/card_elevation">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="16dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/orientacia"
                        android:textAlignment="center"
                        android:textColor="@android:color/black"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </TableRow>

    </TableLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"></RelativeLayout>

</LinearLayout>